<resources>
    <string name="app_name">Movie Mania</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Movie Details</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addMovie">Add Movie</string>
    <string name="random_movie">Random Movie</string>
    <string name="share">Share</string>
    <string name="owned">Owned</string>
    <string name="trailer">Trailer</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="movie_details">Movie Details</string>
    <string name="want_to_watch">Want to Watch</string>
    <string name="master_list">Master List</string>
    <string name="ranked">Ranked</string>
    <string name="account_info">Account Info</string>
    <string name="change_account">Change Account</string>
    <string name="ranked_list">Ranked List</string>
    <string name="overview_">Overview:</string>
    <string name="genres_">Genres:</string>
    <string name="movie_title">Movie Title</string>
    <string name="share_top_10">Share Top 10</string>
    <string name="user_email">User Email:</string>
    <string name="user_name">User Name:</string>
    <string name="actors">Actors:</string>
    <string name="user_notes">User Notes:</string>
    <string name="user_rating">User Rating:</string>
</resources>